--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "christmas-ascii",
-  "version": "0.0.2",
-  "description": "Get some Christmas ascii",
+  "version": "0.0.3",
+  "description": "Get some Christmas ascii.",
   "main": "index.js",
   "bin": {
     "christmas-ascii": "./cli.js"
